Modernization of wiki
update parsoid to v0.10
add mariadb
add restbase
add elasticsearch
add varnish caching proxy
add more extension support
initial setup for openid
initial setup for pluggableauth
initial setup for proton/chromium renderer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '2'
+version: "2"
 services:
     db:
-        image: pastakhov/mysql:5.7
+        build: ./db
         restart: always
         environment:
-            - MYSQL_ROOT_HOST=%
-            - MYSQL_ROOT_PASSWORD=3dodPaTXF5
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_ROOT_PASSWORD: "mKwzuMCXLlXr1oI6"
+            MYSQL_DATABASE: "mediawiki"
+            MYSQL_USER: "mwuser"
+            MYSQL_PASSWORD: "8Xgat7mUKa"
+        volumes:
+            - "db:/var/lib/mysql"
 
     proxy:
         image: pastakhov/varnish-mediawiki:1.0
@@ -16,16 +21,14 @@ services:
         ports:
             - "8080:80"
         environment:
-            - PROXY_BACKEND_web=web:80
-            - PROXY_BACKEND_restbase=restbase:7231
-            - PROXY_RESTBASE_BACKEND=restbase
-            - PROXY_RESTBASE_URL=^/api/rest_v1
-            - PROXY_RESTBASE_SUB=/{backend_hint}/v1
+            PROXY_BACKEND_web: "web:80"
+            PROXY_BACKEND_restbase: "restbase:7231"
+            PROXY_RESTBASE_BACKEND: "restbase"
+            PROXY_RESTBASE_URL: "^/api/rest_v1"
+            PROXY_RESTBASE_SUB: "/{backend_hint}/v1"
 
     web:
-        build: 
-            context: ./web
-            dockerfile: Dockerfile
+        build: ./web
         restart: always
         depends_on:
             - db
@@ -34,62 +37,56 @@ services:
             - parsoid
             - restbase
         environment:
-            - MW_SITE_SERVER=//localhost:8080
-            - MW_SITE_NAME=MediaWiki
-            - MW_SITE_LANG=en
-            - MW_DEFAULT_SKIN=vector
-            - MW_ENABLE_UPLOADS=1
-            - MW_USE_INSTANT_COMMONS=0
-            - MW_ADMIN_USER=admin
-            - MW_ADMIN_PASS=q32Gx7Amg7
-            - MW_DB_NAME=mediawiki
-            - MW_DB_USER=mwuser
-            - MW_DB_PASS=8Xgat7mUKa
-            - MW_DB_INSTALLDB_USER=root
-            - MW_DB_INSTALLDB_PASS=3dodPaTXF5
-            - MW_AUTOUPDATE=true
-            - MW_PROXY_SERVERS=proxy
-            - MW_MAIN_CACHE_TYPE=CACHE_MEMCACHED
-            - MW_MEMCACHED_SERVERS=memcached:11211
-            - MW_SEARCH_TYPE=CirrusSearch
-            - MW_CIRRUS_SEARCH_SERVERS=elasticsearch
-            - MW_REST_DOMAIN=web
-            - MW_REST_PARSOID_URL=http://parsoid:8000
-            - MW_REST_RESTBASE_URL=http://restbase:7231
-            - MW_REST_RESTBASE_PROXY_PATH=/api/rest_
-            - MW_FLOW_NAMESPACES=NS_TALK,NS_USER_TALK
-            - PHP_LOG_ERRORS=On
-            - PHP_ERROR_REPORTING=E_ALL #Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
+            MW_SITE_SERVER: "//localhost:8080"
+            MW_SITE_NAME: "MediaWiki"
+            MW_SITE_LANG: "en"
+            MW_DEFAULT_SKIN: "vector"
+            MW_ENABLE_UPLOADS: 1
+            MW_USE_INSTANT_COMMONS: 0
+            MW_ADMIN_USER: "admin"
+            MW_ADMIN_PASS: "q32Gx7Amg7"
+            MW_DB_NAME: "mediawiki"
+            MW_DB_USER: "mwuser"
+            MW_DB_PASSWORD: "8Xgat7mUKa"
+            MW_AUTOUPDATE: "true"
+            MW_PROXY_SERVERS: "proxy"
+            MW_MAIN_CACHE_TYPE: "CACHE_MEMCACHED"
+            MW_MEMCACHED_SERVERS: "memcached:11211"
+            MW_SEARCH_TYPE: "CirrusSearch"
+            MW_CIRRUS_SEARCH_SERVERS: "elasticsearch"
+            MW_REST_DOMAIN: "web"
+            MW_REST_PARSOID_URL: "http://parsoid:8000"
+            MW_REST_RESTBASE_URL: "http://restbase:7231"
+            MW_REST_RESTBASE_PROXY_PATH: "/api/rest_"
+            MW_FLOW_NAMESPACES: "NS_TALK,NS_USER_TALK"
+            PHP_LOG_ERRORS: "On"
+            PHP_ERROR_REPORTING: "E_ALL #Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT"
 
     memcached:
-        image: memcached
+        image: memcached:1.5
         restart: always
 
     parsoid:
-        image: pastakhov/parsoid:0.7.1
+        image: thenets/parsoid:0.10.0
         restart: always
         environment:
-            - PARSOID_NUM_WORKERS=0
-            - PARSOID_DOMAIN_web=http://web/w/api.php
+            PARSOID_NUM_WORKERS: 0
+            PARSOID_DOMAIN_web: "http://web/w/api.php"
 
     restbase:
-        image: pastakhov/restbase:0.16.9
+        build: ./restbase
         restart: always
         environment:
-            - RB_CONF_NUM_WORKERS=0
-            - RB_CONF_DOMAIN_web=http://web/w/api.php
-            - RB_CONF_PARSOID_HOST=http://parsoid:8000
-            - RB_CONF_BASE_URI_TEMPLATE=http://{domain}/api/rest_v1
-            - RB_CONF_API_URI_TEMPLATE=http://{domain}/w/api.php
-            - RB_CONF_LOGGING_LEVEL=info #trace
-            - RB_CONF_PDF_URI=http://pdf:3000
+            RB_CONF_NUM_WORKERS: 0
+            RB_CONF_DOMAIN_web: "http://web/w/api.php"
+            RB_CONF_PARSOID_HOST: "http://parsoid:8000"
+            RB_CONF_BASE_URI_TEMPLATE: "http://{domain}/api/rest_v1"
+            RB_CONF_API_URI_TEMPLATE: "http://{domain}/w/api.php"
+            RB_CONF_LOGGING_LEVEL: "info #trace"
 
     elasticsearch:
         image: elasticsearch:5.6
         restart: always
 
-    pdf:
-        image: msokk/electron-render-service
-        restart: always
-        environment:
-            RENDERER_ACCESS_KEY: secret
+volumes:
+    db:
